# uv-demo

./: README.md  app.py  pyproject.toml  requirements.txt  some_script.py
demo-project/: app.py  pyproject.toml
demo-project/src/demo_project/: __init__.py  app.py  plots.py
src/uv_demo/: app.py  data.py
uv-demo-add-remove/: main.py  pyproject.toml
uv-demo-lib/: pyproject.toml
uv-demo-lib/notebooks/: test.ipynb
uv-demo-lib/src/uv_demo_lib/: __init__.py  add.py
