[project]
name = "demo-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben Lindsay", email = "benjlindsay@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "plotly[express]>=6.0.1",
]

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
]
