[project]
name = "uv-demo-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben Lindsay", email = "ben.lindsay@chrobinson.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
